--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,7 @@ dependencies {
 
     // Dependencia agregada
     implementation 'com.android.volley:volley:1.1.1'
+
+    // Dependencia para subir fotos
+    implementation 'net.gotev:uploadservice:3.1'
 }
